# grive-indicator

./: .flake8  .gitignore  .pep8  .pycodestyle  .travis.yml  Pipfile  README.md  grive-indicator  grive-indicator.desktop  pep8test.py  pyproject.toml  requirements.txt  runtests  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: main.yml
data/: grive-indicator.desktop
grive_indicator/: UI.py  __init__.py  configure.py  settings.py  tools.py
grive_indicator/UI/: __init__.py  configure.py  settings.py
grive_indicator/data/: grive-indicator.desktop  grive_indicator.conf
resources/: settings.glade
snap/: snapcraft.yaml
tests/: __init__.py  test_net.py  test_style.py  test_tools.py  tools.py
